--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,43 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../images/white-and-red-sauce-lasagna-recipe-995925-hero-1-fb2c2142b39042069f0c50310047256d.png">
+    <h2>Description</h2>
+    <p>
+        Filling and easy to make, lasagnas are great one-dish meals that check all the boxes, 
+        as they can be filled with all sorts of veggies, sauces, and proteins, and can be adjusted to 
+        many special dietary needs. Our red and white sauce lasagna is a flavorful combination of a 
+        basic white sauce, rather than ricotta cheese, and a tomato-based sauce with beef and pork 
+        that's flavored with spices and mushrooms. Covered in cheese and baked until golden, this is 
+        a great weeknight meal served with a simple salad and crusty bread.
+    </p>
+    <p>
+        We use oven-ready (also called no-boil) lasagna noodles to speed up the cooking time. 
+        Simply assemble the lasagna with the uncooked noodles, seal it tight with foil, and bake. 
+        As the sauce simmers, the noodles cook all on their own thanks in part to the moisture in the 
+        sauces. The key is to keep the lasagna covered in the oven until the noodles are soft. 
+        Removing the foil allows the upper layer of the lasagna to achieve an appetizing golden color. 
+        The oven-ready noodles are also available in a gluten-free version if someone in your 
+        household has special dietary needs.
+    </p>
+    <p>
+        Although a few steps are required to complete this dish, the recipe is fairly simple and 
+        can be a great first lasagna for novice cooks.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 tbsp butter</li>
+        <li>2.5 cups milk</li>
+        <li>.3 cup flour</li>
+        <li>.5 tsp kosher salt</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Melt butter in a saucepan</li>
+        <li>Warm up milk in a saucepan</li>
+        <li>Form a roux by adding flour</li>
+        <li>Alternate layers of sauce and pasta before adding a final layer of cheese</li>
+        <li>Bake for 40 minutes</li>
+
+    </ol>
 </body>
 </html>
